--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         is_dark: true,
         more_colorful: true,
       },
+      { title: 'espeon',
+        background: '422e88',
+        primary: ['e3c6f0'],
+        is_dark: true,
+      }
     ];
   </script>
 
@@ -56,6 +61,7 @@
         }
         .demo{{$index}} .button.secondary:hover {
           background-color: #{{palette.getSecondaryFill().hex}};
+          color: #333;
         }
 
         .demo{{$index}}.more-colorful .button {
@@ -63,6 +69,12 @@
         }
         .demo{{$index}}.more-colorful .button.secondary {
           background-color: #{{palette.getSecondaryFill().hex}};
+        }
+
+        // if dark mode, flip button text when background fill on
+        .demo{{$index}}.dark .button:hover,
+        .demo{{$index}}.dark.more-colorful .button {
+          color: #333;
         }
       </style>
       <div class="demo demo{{$index}}"
