--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         }
 
         // if dark mode, flip button text when background fill on
-        .demo{{$index}}.dark .button:hover,
+        .demo{{$index}}.dark .button:hover {
+          color: #333;
+        }
         .demo{{$index}}.dark.more-colorful .button {
           color: #333;
         }
