more color schemes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         primary: ['57bf43', 'b2d5ab'],
         secondary: ['e62e00', 'ec957f'],
       },
+      { title: 'salad',
+        background: 'b2d5ab',
+        primary: ['ec957f'],
+        more_colorful: true,
+      },
       { title: 'chartreuse',
         background: '2e3038',
         text: 'bcd864',
@@ -38,7 +43,7 @@
         background: '422e88',
         primary: ['e3c6f0'],
         is_dark: true,
-      }
+      },
     ];
   </script>
 
