--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="controls">
         <i class="fa"
            ng-class="{'fa-toggle-on': palette.more_colorful,
                       'fa-toggle-off': !palette.more_colorful}"
