tooltip input styling

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           {{ipsum}}
           <a href="#">link</a>
         </div>
-        <div class="button">action</div>
+        <div class="button">button</div>
         <div ng-if="palette.secondary"
              class="button secondary">secondary</div>
         <div class="button exit-fullscreen"
