--- a/index.html
+++ b/index.html
@@ -83,11 +83,6 @@
     <div ng-repeat="palette in palettes track by $index"
          class="palette-container">
 
-      <!-- Generated palette-specific CSS -->
-      <style palette-style
-             palette="palette"
-             index="$index"></style>
-
       <!-- Demo box -->
       <div class="demo demo{{$index}}"
            ng-class="{'dark': palette.is_dark,
@@ -132,6 +127,52 @@
           <span>fullscreen</span>
         </span>
       </div>
+
+      <!-- Palette-specific styling -->
+      <!-- Tried refactoring this out into a templated directive, but it
+           rendered too slowly -->
+      <style>
+.demo{{$index}} {
+  color: #{{palette.text}};
+  background-color: #{{palette.background}};
+}
+
+.demo{{$index}}::selection {
+  background: #{{palette.highlight}};
+}
+.demo{{$index}} ::selection {
+  background: #{{palette.highlight}};
+}
+
+.demo{{$index}} a { color: #{{palette.primary.color}} }
+.demo{{$index}} a:hover { color: #{{palette.getSecondary()}} }
+
+.demo{{$index}}.more-colorful h1 { color: #{{palette.primary.color}}; }
+
+.demo{{$index}} .button:hover {
+  background-color: #{{palette.getPrimaryFill()}};
+  color: #333;
+}
+.demo{{$index}} .button.secondary:hover {
+  background-color: #{{palette.getSecondaryFill()}};
+  color: #333;
+}
+
+.demo{{$index}}.more-colorful .button {
+  background-color: #{{palette.getPrimaryFill()}};
+}
+.demo{{$index}}.more-colorful .button.secondary {
+  background-color: #{{palette.getSecondaryFill()}};
+}
+
+// if dark mode, flip button text when background fill on
+.demo{{$index}}.dark .button:hover {
+  color: #333;
+}
+.demo{{$index}}.dark.more-colorful .button {
+  color: #333;
+}
+      </style>
 
     </div>
   </div>
